--- a/src/Pages/Home/Team/Team.css
+++ b/src/Pages/Home/Team/Team.css
@@ -1,5 +1,5 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Inter:wght@600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1&family=M+PLUS+Rounded+1c&family=Niramit:ital,wght@1,700&family=Noto+Sans&family=Noto+Sans+Bengali:wght@500;900&family=Nunito+Sans:wght@300&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Inter:wght@500;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1&family=M+PLUS+Rounded+1c&family=Niramit:ital,wght@1,700&family=Noto+Sans&family=Noto+Sans+Bengali:wght@500;900&family=Nunito+Sans:wght@300&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
 /* Style the input container */
 .input-container {
   display: flex;
@@ -7,4 +7,5 @@
   margin-bottom: 15px;
 
 }
+
 
