--- a/src/Pages/Home/Hero/Hero.css
+++ b/src/Pages/Home/Hero/Hero.css
@@ -8,18 +8,18 @@
 }
 
 .banner-text{
-    font-family: 'Didact Gothic', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .text-style{
-   font-family: 'Didact Gothic', sans-serif;
+   font-family: 'Roboto', sans-serif;
     color: #595959;
-    font-weight: 700;
+    font-weight: 300;
 }
 .text-styles{
-   font-family: 'Didact Gothic', sans-serif;
+   font-family: 'Roboto', sans-serif;
     color: #629dad;
-    font-weight: 700;
+    font-weight: 300;
 }
 
 
