--- a/src/Pages/Home/BigData/Relevence/Relevence.css
+++ b/src/Pages/Home/BigData/Relevence/Relevence.css
@@ -71,6 +71,6 @@
 
 
 .content-text{
-    font-family: 'Didact Gothic', sans-serif;
-    font-weight: 500; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700; 
 }
