--- a/src/Pages/Home/Contact/Contact.css
+++ b/src/Pages/Home/Contact/Contact.css
@@ -1,10 +1,10 @@
 .heading{
-    font-family: 'Didact Gothic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;  
 }
 
 .cont-pra{
-    font-family: 'Didact Gothic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 600;
 }
 
