--- a/src/Pages/Home/Login/Login.css
+++ b/src/Pages/Home/Login/Login.css
@@ -1,5 +1,5 @@
-.login{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
+.sign{
+    background: linear-gradient(rgba(69, 77, 82, 0.5), rgba(64, 84, 87, 0.4)),
     url("https://i.ibb.co/SmnGczN/Nipic-3046502-20171204130538292000.jpg") no-repeat center center;
     width: 100%;
     height: 600px;
@@ -22,7 +22,7 @@
 }
 
 .input-col{
-    background-color:#E6EBFF;
+    background-color:#5ac2df;
     border: none;
 }
 
