--- a/src/Pages/Home/Contact/Contact.css
+++ b/src/Pages/Home/Contact/Contact.css
@@ -1,15 +1,8 @@
-.heading{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;  
-}
 
-.cont-pra{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-}
+
 
 .testimonials{
-    border-left:3px solid #DC3318 ;
+    border-left:3px solid #1d4ed8 ;
     margin-top: 50px;
    
    
