--- a/src/Pages/Home/DoNavbar/DoNavbar.css
+++ b/src/Pages/Home/DoNavbar/DoNavbar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;800&display=swap');
 .header {
    
     /* height: 80px; */
@@ -23,7 +24,7 @@
 
 .header .nav-menu a {
     color: #ffffff;
-    font-family: 'Roboto', sans-serif;
+   
     font-weight: 300;
 }
 
@@ -39,18 +40,19 @@
 
 .header .nav-item {
     padding: 1rem;
-    font-weight: 500;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
     cursor: pointer;
     
 }
 .nav-item .active{
     padding-bottom: 12px;
-    border-bottom: 4px solid orangered;
+    border-bottom: 4px solid #1d4ed8;
 }
 
 .header .nav-item a:hover {
     padding-bottom: 12px;
-    border-bottom: 3px solid orangered;
+    border-bottom: 3px solid #1d4ed8;
 }
 
 .hamburger {
