--- a/src/Pages/Home/Hero/Hero.css
+++ b/src/Pages/Home/Hero/Hero.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1&family=M+PLUS+Rounded+1c&family=Niramit:ital,wght@1,700&family=Noto+Sans&family=Noto+Sans+Bengali:wght@500;900&family=Nunito+Sans:wght@300&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Work+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap');
 .banner {
     background-image: url(/src/assets/Image/bg1.jpeg);
     width: 100%;
@@ -8,16 +9,23 @@
 }
 
 .banner-text{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+
+.hero-text{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
 }
 
 .text-style{
-   font-family: 'Roboto', sans-serif;
+ 
     color: #595959;
-    font-weight: 300;
+    font-weight: 500;
 }
 .text-styles{
-   font-family: 'Roboto', sans-serif;
+ 
+
     color: #629dad;
     font-weight: 300;
 }
