--- a/src/Pages/Home/Navbar/Navbar.css
+++ b/src/Pages/Home/Navbar/Navbar.css
@@ -1,21 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Inter:wght@500;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1:wght@400;600;800;900&family=M+PLUS+Rounded+1c&family=Merriweather:ital,wght@0,700;1,700&family=Montserrat:ital,wght@0,600;1,600&family=Niramit:ital,wght@1,700&family=Noto+Sans+Bengali:wght@500;900&family=Noto+Sans:wght@400;600&family=Nunito+Sans:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,400;1,600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Roboto:wght@500&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Inter:wght@500;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1:wght@400;600;800;900&family=M+PLUS+Rounded+1c&family=Merriweather:ital,wght@0,700;1,700&family=Montserrat:ital,wght@0,600;1,600&family=Niramit:ital,wght@1,700&family=Noto+Sans+Bengali:wght@500;900&family=Noto+Sans:wght@400;600&family=Nunito+Sans:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,400;1,600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Roboto:wght@500;700&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,700&family=Didact+Gothic&family=Galada&family=Inter:wght@500;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=M+PLUS+1:wght@400;600;800;900&family=M+PLUS+Rounded+1c&family=Merriweather:ital,wght@0,700;1,700&family=Montserrat:ital,wght@0,600;1,600&family=Niramit:ital,wght@1,700&family=Noto+Sans+Bengali:wght@500;900&family=Noto+Sans:wght@400;600&family=Nunito+Sans:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,400;1,600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,600;1,800;1,900&family=Roboto+Slab:wght@500&family=Roboto:wght@300;400;500;700;900&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
+
 .fonts {
-  font-family: "Didact Gothic", sans-serif;
+  
   /* color: #629dad; */
   font-weight: 500;
   font-size: 14px;
 }
 .logo-weight{
-  font-family: 'Roboto', sans-serif;
-  font-weight: 900;
+ 
+  font-weight: 800;
   font:bolder;
   /* color: #629dad; */
 }
 
 .btn-width{
-  font-family: 'Roboto', sans-serif;
+ 
   font-weight: 900;
 }
 .nav-link {
@@ -31,13 +29,13 @@
   left: 0;
   width: 0%;
   height: 2px;
-  background: #629dad;
+  background: linear-gradient(#5540f6c1,rgba(37, 108, 251, 0.583));
   transition: 0.4s;
   justify-content: center;
 }
 
 .nav-link:hover {
-  color: #629dad !important;
+  color: linear-gradient(#7461fec1,rgba(42, 149, 255, 0.583))!important;
 }
 .nav-link:hover.nav-link::after {
   width: 100%;
