--- a/src/Pages/Home/Card/Card.css
+++ b/src/Pages/Home/Card/Card.css
@@ -21,8 +21,8 @@
     content: "";
     position: absolute;
     top: -1px;
-    left: -1px;
-    right: -1px;
+    left:-1px;
+    right: -2px;
     bottom: -1px;
     background: black;
     z-index: -1;
@@ -74,5 +74,17 @@
     .box:nth-child(4):after {
         background: linear-gradient(235deg, #89ff00, #ff005e, #010615, #fbff00);
         left: -1px;
+    }
+}
+@media (max-width:1440px) {
+    .box:nth-child(2):before,
+    .box:nth-child(2):after {
+        background: linear-gradient(235deg, #89ff00, #ff005e, #010615, #fbff00);
+        right: -1px;
+    }
+    .box:nth-child(4):before,
+    .box:nth-child(4):after {
+        background: linear-gradient(235deg, #89ff00, #ff005e, #010615, #fbff00);
+        right: -1px;
     }
 }
